# example_SDL_3D_Model_Viewer

./: .clangd  .gitignore  CMakeLists.txt  Global.cpp  Global.h  README.md  main.cpp
core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h
imgui/: imgui_impl_glfw.h  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
my_glm/: glm.hpp
renderer/: Mesh.h  Renderer.cpp  Renderer.h
